--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이젠 ART COOK</title>
+    <title> ART COOK</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +15,7 @@
         <div class="container">
             <a class="gugi-font navbar-brand" href="#home">
                 <img src="./images/logo.png" alt="로고">
-                이젠 Cook</a>
+                 Cook</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,7 +34,7 @@
     <!-- 네비게이션 영역 끝 -->
     <!-- 헤더영역시작 -->
     <header id="home" class="d-flex flex-column justify-content-center vh-100 align-items-center text-white">
-        <h1 class="display-3 fw-bold mb-5">이젠 ART Cook</h1>
+        <h1 class="display-3 fw-bold mb-5">ART Cook</h1>
         <h4 class="fs-2 mb-3">요리와 아트의 만남</h4>
         <p class="lead mb-5">아름다운 한 끼로 삶의 색채를 더하다</p>
         <button type="button" class="btn btn-outline-warning rounded-pill" data-bs-toggle="modal" data-bs-target="#bestmenuModal">대표 요리 보기</button>
@@ -67,7 +67,7 @@
                 <img src="./images/chef.jpg" alt="쉐프 프로필 사진" class="img-fluid">
             </div>
             <div class="col-md-7 col-lg-5 px-lg-5">
-                <h3 class="fw-bold mb-3">이젠 Emmi</h3>
+                <h3 class="fw-bold mb-3">Emmi</h3>
                 <p class="lh-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis architecto et beatae reprehenderit quo saepe facilis a, cum maxime expedita ducimus possimus aliquid cupiditate iure.
                 </p>
                 <p class="lh-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis architecto et beatae reprehenderit quo saepe facilis a, cum maxime expedita ducimus possimus aliquid cupiditate iure.
@@ -305,7 +305,7 @@
    <footer class="bg-dark text-white">
         <div class="container text-center">
             <p class="py-4 mb-0">Copyright <i class="bi bi-c-circle"></i> 2023 Designed by <a href="https://mr.ezenac.co.kr/" target="_blank"
-                    class="gugi-font link-warning text-decoration-none">이젠 ART Cook</a></p>
+                    class="gugi-font link-warning text-decoration-none">ART Cook</a></p>
         </div>
     </footer>
     <!-- 풋터 끝 -->
